Ugly implementation of a new concept for the merge dialog